# computer-club-handler

./: CMakeLists.txt  README.md  Тестовое задание С++.docx
include/: CClubHandler.h  CClubParser.h  models.h
src/: CClubHandler.cpp  CClubParser.cpp  main.cpp
tests/: test_handler.cpp  test_parser.cpp
